<resources>
    <string name="app_name">Tour Guide</string>
    <string name="restaurant">Restaurant</string>
    <string name="museum">Museum</string>
    <string name="beach">Beach</string>
    <string name="night_club">Night club</string>
    <string name="landmark">Landmark</string>
    <string name="image">Image</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="number">Contact:</string>
    <string name="hours">Working hours:</string>
    <string name="description">description</string>
    <string name="no_number">No number</string>
    <string name="museum_split_city_name">Papalić Palace and the City Museum</string>
    <string name="museum_split_city_address">Papalićeva ulica 1</string>
    <string name="museum_split_city_number">021 344 917</string>
    <string name="museum_arheologic_name">Museum of Croatian Archaeological Monuments</string>
    <string name="museum_arheologic_address">Gunjačina ulica bb</string>
    <string name="museum_arheologic_number">021 323 901</string>
    <string name="museum_etnographic_name">Ethnographic museum Split</string>
    <string name="museum_etnographic_address">Ulica Iza Vestibula 4</string>
    <string name="museum_etnographic_number">021 343 108</string>
    <string name="museum_gallery_of_fine_arts_name">Gallery of Fine Arts</string>
    <string name="museum_gallery_of_fine_arts_address">Kralja Tomislava 15</string>
    <string name="museum_gallery_of_fine_arts_number">021 350 110</string>
    <string name="museum_maritime_name">Croatian Maritime Museum</string>
    <string name="museum_maritime_address">Glagoljaška ulica 18</string>
    <string name="museum_mestrovic_gallery_name">Ivan Meštrović Gallery</string>
    <string name="museum_mestrovic_gallery_address">Šetalište Ivana Meštrovića 46</string>
    <string name="museum_mestrovic_gallery_number">021 340 800</string>
    <string name="beach_bacvice_name">Bačvice</string>
    <string name="beach_bacvice_address">Uvala Bačvice</string>
    <string name="beach_bene_name">Bene</string>
    <string name="beach_bene_address">Šetalište Marina Tartaglie</string>
    <string name="beach_firule_name">Firule</string>
    <string name="beach_firule_address">"Ulica Uvala Zenta"</string>
    <string name="beach_kasjuni_name">Kašjuni</string>
    <string name="beach_kasjuni_address">Šetalište Ivana Meštrovića 55</string>
    <string name="beach_obojena_name">Obojena</string>
    <string name="beach_obojena_address">Šetalište Ivana Meštrovića 35</string>
    <string name="beach_znjan_name">Žnjan</string>
    <string name="beach_znjan_address">Šetalište Pape Ivana Pavla II 31</string>
    <string name="club_central_name">Central</string>
    <string name="club_central_address">Trg Gaje Bulata 4</string>
    <string name="club_central_working_hours">12:30 - 6 AM</string>
    <string name="club_central_number">091 332 3234</string>
    <string name="club_judino_drvo_name">Judas Tree</string>
    <string name="club_judino_drvo_address">Kopilica ulica</string>
    <string name="club_judino_drvo_working_hours">9 PM - 4 AM</string>
    <string name="club_judino_drvo_number">095 766 2367</string>
    <string name="club_kauri_name">Kauri</string>
    <string name="club_kauri_address">Poljička cesta</string>
    <string name="club_kauri_working_hours">Open 24 hours</string>
    <string name="club_kauri_number">099 242 4444</string>
    <string name="club_quasimodo_name">Quasimodo</string>
    <string name="club_quasimodo_address">Ulica Ivana Gundulića 26</string>
    <string name="club_quasimodo_working_hours">Occasionally</string>
    <string name="club_quasimodo_number">091 934 273</string>
    <string name="club_tropic_name">Tropic</string>
    <string name="club_tropic_address">Plaža Bačvice</string>
    <string name="club_tropic_working_hours">10 PM - 4 AM</string>
    <string name="club_tropic_number">099 203 9222</string>
    <string name="club_vanilla_name">Vanilla</string>
    <string name="club_vanilla_address">Poljudsko šetalište b.b.</string>
    <string name="club_vanilla_working_hours">10 PM - 5 AM</string>
    <string name="club_vanilla_number">099 831 3050</string>
    <string name="club_velvet_name">Velvet</string>
    <string name="club_velvet_address">Put Supavla 1A</string>
    <string name="club_velvet_working_hours">10 PM - 4 AM</string>
    <string name="club_velvet_number">095 897 1277</string>
    <string name="club_zenta_name">Zenta</string>
    <string name="club_zenta_address">Ulica Uvala Zenta</string>
    <string name="club_zenta_working_hours">10 PM - 6 AM</string>
    <string name="club_zenta_number">098 455 578</string>
    <string name="restaurant_augubio_congo_name">Augubio Congo</string>
    <string name="restaurant_augubio_congo_address">Dioklecijanova ulica 1</string>
    <string name="restaurant_augubio_congo_working_hours">8 AM - 10:45 PM</string>
    <string name="restaurant_augubio_congo_number">099 323 9671</string>
    <string name="restaurant_bajamonti_name">Bajamonti</string>
    <string name="restaurant_bajamonti_address">Trg Republike 1</string>
    <string name="restaurant_bajamonti_working_hours">7:30 AM - 12 AM</string>
    <string name="restaurant_bajamonti_number">021 341 033</string>
    <string name="restaurant_bokeria_name">Bokeria kitchen and wine bar</string>
    <string name="restaurant_bokeria_address">Domaldova ulica 8</string>
    <string name="restaurant_bokeria_working_hours">9 AM - 1 AM</string>
    <string name="restaurant_bokeria_number">021 355 577</string>
    <string name="restaurant_dalmatino_name">Dalmatino</string>
    <string name="restaurant_dalmatino_address">Ulica Ispod Svetog Lovre 2B</string>
    <string name="restaurant_dalmatino_working_hours">10 AM - 12 AM</string>
    <string name="restaurant_dalmatino_number">021 320 004</string>
    <string name="restaurant_graso_name">Adriatic Grašo</string>
    <string name="restaurant_graso_address">Uvala Baluni bb</string>
    <string name="restaurant_graso_working_hours">9 AM - 1 AM</string>
    <string name="restaurant_graso_number">021 398 560</string>
    <string name="restaurant_mazzgoon_name">Mazzgoon</string>
    <string name="restaurant_mazzgoon_address">Bajamontijeva ulica 1</string>
    <string name="restaurant_mazzgoon_working_hours">8 AM - 1 AM</string>
    <string name="restaurant_mazzgoon_number">098 987 7780</string>
    <string name="restaurant_perivoj_name">Perivoj</string>
    <string name="restaurant_perivoj_address">Slavićeva ulica 44</string>
    <string name="restaurant_perivoj_working_hours">9 AM - 12 AM</string>
    <string name="restaurant_perivoj_number">021 785 875</string>
    <string name="landmark_diocletian_palace_name">Diocletian\'s Palace</string>
    <string name="landmark_diocletian_palace_description">One of the reasons why Split is popular. On UNESCO\'s heritage list.</string>
    <string name="landmark_grgur_ninski_name">Grgur Ninski</string>
    <string name="landmark_grgur_ninski_description">Statue at the one of the gates of Diocletian\'s palace that has a famous toe where you can make a wish.</string>
    <string name="landmark_let_me_pass_street_name">Let me pass Street</string>
    <string name="landmark_let_me_pass_street_description">The narrowest street in the world, located in the Diocletian\'s palace.</string>
    <string name="landmark_poljud_name">Stadium Poljud</string>
    <string name="landmark_poljud_description">The city stadium, built in the 80s. Famous for its beauty and helding Ultra Europe festival.</string>
    <string name="landmark_prokurative_name">Prokurative square</string>
    <string name="landmark_prokurative_description">Republic square where music festivals occur during the summer, close to Riva promenade.</string>
    <string name="landmark_riva_name">Riva promenade</string>
    <string name="landmark_riva_description">The most famous street in Split and one of the most visited parts of Split.</string>
    <string name="landmark_split_national_theater_name">Split national theater</string>
    <string name="landmark_split_national_theater_description">Old national theatre building, built in the 19th century.</string>
    <string name="landmark_st_duje_cathedral_name">Saint Duje Cathedral</string>
    <string name="landmark_st_duje_cathedral_description">Cathedral of the Split\'s saint, build around 1700 years ago.</string>


</resources>
